...
    "defaultMessage": "Got it!"
  },
  "appLayout.collapseNavigation": {
    "defaultMessage": "Collapse navigation"
  },
  "appLayout.openNavigation": {
    "defaultMessage": "Open navigation"
  },
  "appsView.customApp": {
    "defaultMessage": "Custom app"
  },
  "appsView.deleteApp": {
    "defaultMessage": "Delete app"
...
    "defaultMessage": "Restart Required"
  },
  "keyboardShortcuts.settingsDescription": {
    "defaultMessage": "Open settings panel"
  },
  "keyboardShortcuts.settingsLabel": {
    "defaultMessage": "Settings"
  },
  "keyboardShortcuts.shortcutConflictSaveDetail": {
    "defaultMessage": "Saving this will remove the shortcut from \"{conflictLabel}\" and assign it to \"{targetLabel}\". Do you want to continue?"
  },
  "keyboardShortcuts.shortcutConflictTitle": {
    "defaultMessage": "Shortcut Conflict"
...
